tests/errors/sem19.kt
fun main() {
    var y: Int = x; // x undeclared
}